--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,3 +9,10 @@
 .panel-body.panel-list-group .list-group .list-group-item:first-child {
 	border-radius: 0;
 }
+
+.alert-container {
+    position: fixed;
+    bottom: 10px;
+    left: 20px;
+    right: 20px;
+}
